--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,7 +32,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/login, role: PUBLIC_ACCESS }
-        - { path: ^/register/, role: PUBLIC_ACCESS }
+        - { path: ^/register, role: PUBLIC_ACCESS }
         - { path: '^/', roles: [IS_AUTHENTICATED_FULLY] }
         # - { path: ^/profile, roles: ROLE_USER }
 
